--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=E-Store
+
+server.port=9090
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/electronic_store
+spring.datasource.username=root
+spring.datasource.password=aditya
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
