server user image api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.show-sql=true
 
 user.profile.image.path = images/users
 
+# Maximum file size for an individual file
+spring.servlet.multipart.max-file-size=10MB
+
+# Maximum request size for a multipart/form-data request
+spring.servlet.multipart.max-request-size=10MB
+
