add Category and CategoryDto file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
-user.profile.image.path = images/users
+user.profile.image.path = images/users/
 
 # Maximum file size for an individual file
 spring.servlet.multipart.max-file-size=10MB
