implement category cover image upload controller and service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.show-sql=true
 
 
 user.profile.image.path = images/users/
+category.coverImage.image.path = images/categories/
 
 # Maximum file size for an individual file
 spring.servlet.multipart.max-file-size=10MB
