implement the feature of product image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.show-sql=true
 
 user.profile.image.path = images/users/
 category.coverImage.image.path = images/categories/
+product.image.path = images/products/
 
 # Maximum file size for an individual file
 spring.servlet.multipart.max-file-size=10MB
