--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ target/
 .springBeans
 .sts4-cache
 
+
 ### IntelliJ IDEA ###
 .idea
 
@@ -35,4 +36,8 @@ build/
 
 
 images/
+
+## Application Properties file
+application.properties
+
 
